--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -1,13 +1,20 @@
 @import url("~leaflet/dist/leaflet.css");
 
 .leaflet-container {
-    height: 100vh;
-    width: 100vw;
+    height: 98vh;
+    width: 99vw;
 }
 .navBar{
+    border-style: solid;
+    display: flex;
     background-color: transparent;
-    position: relative;
-    z-index: 10;
-    width: 100px;
-    height: 20px
+    position: absolute;
+    z-index: 400;
+    width: 170px;
+    top: 70px;
+    right: 10px;
+    height: auto;
+}
+.navBar:hover{
+    background-color: lawngreen;
 }
