--- a/src/components/MainNavBar/MainNavBar.css
+++ b/src/components/MainNavBar/MainNavBar.css
@@ -1,14 +1,33 @@
 .navBar{
-    border-style: solid;
-    display: flex;
-    background-color: transparent;
     position: absolute;
     z-index: 400;
-    width: 170px;
+    width: auto;
     top: 70px;
     right: 10px;
-    height: auto;
+    background-color: transparent;
+    border-radius: 3px;
+    box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.25);
+    margin: 2px;
 }
 .navBar:hover{
     background-color: lawngreen;
+    box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.25);
+}
+.navBarMainInstuments{
+    margin: 10px;
+    display: flex;
+    border-radius: 3px;
+    box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.25);
+
+}
+.navBar_button{
+    min-height: 20px;
+    min-width: 30px;
+    margin: 5px;
+    border: none;
+    border-radius: 3px;
+    box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.25);
+}
+.navBar_button:hover{
+    background-color: #007fff;
 }
