--- a/src/components/MainNavBar/MainNavBar.css
+++ b/src/components/MainNavBar/MainNavBar.css
@@ -10,7 +10,7 @@
     margin: 2px;
 }
 .navBar:hover{
-    background-color: lawngreen;
+
     box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.25);
 }
 .navBarMainInstuments{
@@ -18,6 +18,7 @@
     display: flex;
     border-radius: 3px;
     box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.25);
+    background-color: brown;
 
 }
 .navBar_button{
