Added: 1) Account dropdown menu with avatar, profile settings, and logout instruments. + css animation 2) Main dropdown menu with icon, about us, help, FAQ buttons. + css animation 3) Project name 4) padding into MainNavBar.css

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -10,3 +10,13 @@
     background-color: #fdfdfe;
     z-index: 400;
 }
+.account_menu{
+    position: absolute;
+    right: 10px;
+}
+.label{
+    color: brown;
+    position: absolute;
+    top: -12px;
+    left: 70px;
+}
