--- a/src/components/MainNavBar/MainNavBar.css
+++ b/src/components/MainNavBar/MainNavBar.css
@@ -18,7 +18,8 @@
     display: flex;
     border-radius: 3px;
     box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.25);
-    background-color: brown;
+    background-color: white;
+    padding: 5px;
 
 }
 .navBar_button{
