--- a/src/components/MainNavBar/MainNavBar.css
+++ b/src/components/MainNavBar/MainNavBar.css
@@ -2,19 +2,18 @@
     position: absolute;
     z-index: 400;
     width: auto;
-    top: 70px;
-    right: 10px;
+    top: 103px;
+    right: 5px;
     background-color: transparent;
     border-radius: 3px;
-    box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.25);
-    margin: 2px;
-}
-.navBar:hover{
+    /*box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.25);*/
 
-    box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.25);
+}
+.hidden{
+    display: none;
 }
 .navBarMainInstuments{
-    margin: 10px;
+    margin: 7px;
     display: flex;
     border-radius: 3px;
     box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.25);
@@ -32,4 +31,13 @@
 }
 .navBar_button:hover{
     background-color: #007fff;
+}
+.show_hide_NavBar{
+    position: absolute;
+    border: none;
+    box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.25);
+    z-index: 400;
+    top: 63px;
+    right: 12px;
+    border-radius: 3px;
 }
