--- a/src/Login/Registration/Signup.css
+++ b/src/Login/Registration/Signup.css
@@ -5,6 +5,22 @@
     left: 0;
     /*overflow: auto;*/
 }
+
+.parent video{
+    min-width: 100%;
+    min-height: 90%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+.parent .logo{
+    z-index: 1;
+    position: relative;
+    text-align: center;
+    color: #dc0000;
+    padding: 10px;
+}
 .block_header>h2{
     text-align: center;
     color: azure;
@@ -43,11 +59,6 @@ input::placeholder{
 input::target-text{
 
 }
-.logos-img {
-    /*margin-top: -8px;*/
-    width: 100%;
-    height: 99%;
-}
 .form_footer{
     position: relative;
     text-align: center;
@@ -58,4 +69,81 @@ input::target-text{
     margin-left: 10px;
     font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
     color: #ff7979;
+}
+
+.registration_button{
+    width: 170px;
+    display:block;
+    font-family: arial, serif;
+    font-size: 16px;
+    border: #109bff 1px solid;
+    color: #000000;
+    padding: 5px;
+    margin: 10px auto;
+    transition: 1s;
+    border-radius: 1px;
+}
+
+.registration_button:hover{
+    transition: .5s;
+    color: #109bff;
+    border: #109bff 1px solid;
+    border-radius: 10px;
+}
+
+.registration_button:active{
+    color: #000;
+    border: #1A1A1A 1px solid;
+    transition: .07s;
+    background-color: #FFF;
+}
+
+.login_button{
+    width:90px;
+    display:block;
+    font-size: 16px;
+    border: #1071FF 1px solid;
+    color: #000000;
+    padding: 5px;
+    margin: 10px auto;
+    transition: .5s;
+    border-radius: 0;
+}
+.login_button:hover{
+    transition: .5s;
+    color: #109bff;
+    border: #109bff 1px solid;
+    border-radius: 10px;
+}
+.login_button:active{
+    color: #000;
+    border: #1A1A1A 1px solid;
+    transition: .07s;
+    background-color: #FFF;
+}
+
+.ref_signin{
+    color: #ffffff;
+    margin:10px;
+    padding:5px;
+    transition:all 0.5s;
+}
+
+.ref_signin:hover{
+    box-shadow:0 -5px 0 #088 inset;
+    border: #008888 1px solid;
+    color: black;
+}
+
+.ref_signup {
+    color: #ffffff;
+    text-align:center;
+    margin:10px auto;
+    padding:5px 5px;
+    transition:all 0.5s;
+}
+.ref_signup:hover{
+    box-shadow:0 -5px 0 #088 inset;
+    border: #008888 1px solid;
+    color: black;
 }
