--- a/src/Login/Registration/Signup.css
+++ b/src/Login/Registration/Signup.css
@@ -7,11 +7,12 @@
 }
 
 .parent video{
-    min-width: 100%;
+    width: 150%;
     min-height: 90%;
-    position: absolute;
+    position: relative;
     top: 50%;
     left: 50%;
+    max-height: 99%;
     transform: translateX(-50%) translateY(-50%);
 }
 .parent .logo{
