--- a/src/Login/Registration/Signup.css
+++ b/src/Login/Registration/Signup.css
@@ -7,12 +7,11 @@
 }
 
 .parent video{
-    width: 150%;
+    min-width: 100%;
     min-height: 90%;
-    position: relative;
+    position: absolute;
     top: 50%;
     left: 50%;
-    max-height: 99%;
     transform: translateX(-50%) translateY(-50%);
 }
 .parent .logo{
