--- a/src/components/Map/Map.css
+++ b/src/components/Map/Map.css
@@ -1,8 +1,6 @@
 @import url("~leaflet/dist/leaflet.css");
 
 .leaflet-container {
-    margin-left: -8px;
-    margin-bottom: -8px;
-    height: 98vh;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
 }
