--- a/src/components/Info/Coordiantes.css
+++ b/src/components/Info/Coordiantes.css
@@ -4,5 +4,6 @@
     border-radius: 3px;
     top: 130px;
     left: 10px;
-    background-color: rgba(0,0,0,0.25);
+    background-color: white;
+    padding: 5px;
 }
