--- a/src/Login/Registration/Signup.css
+++ b/src/Login/Registration/Signup.css
@@ -1,15 +1,14 @@
 .parent {
-    /*background-color: #000000;*/
-    width: 100%;
-    height: 99%;
+    min-width: 100%;
+    min-height: 100%;
     position: absolute;
     left: 0;
-    /*overflow: auto;*/
+    overflow-y: hidden;
 }
 
 .parent video{
     min-width: 100%;
-    min-height: 90%;
+    min-height: 100%;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -20,17 +19,17 @@
     position: relative;
     text-align: center;
     color: #dc0000;
-    padding: 10px;
 }
 .block_header>h2{
     text-align: center;
     color: azure;
 }
-.block {
+
+.block_registration{
     display: inline-block;
     border-radius: 10px;
     vertical-align: top;
-    width: 275px;
+    width: 320px;
     background-color: rgba(240, 248, 255, 0.39);
     position: absolute;
     top: 100px;
@@ -40,12 +39,45 @@
     margin-right: auto;
     padding-bottom: 15px;
 }
-.inputs_block>input {
-    width: 250px;
+
+.block_authorization {
+    display: inline-block;
+    border-radius: 10px;
+    width: 300px;
+    background-color: rgba(240, 248, 255, 0.39);
+    position: absolute;
+    top: 200px;
+    right: 0;
+    left: 0;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 15px;
+}
+
+.inputs_block_login, .inputs_block_registration>fieldset{
+    border-color: #009dff;
+}
+
+.inputs_block_registration, .inputs_block_login>fieldset>legend{
+    font-size: 17px;
+    color: #000000;
+}
+
+.inputs_block_registration>fieldset>input{
+    width: 100%;
     height: 30px;
-    margin-left: 10px;
     background-color: #2a5fa2;
-    margin-bottom: 10px;
+    border-radius: 3px;
+    border-style: none;
+    color: azure;
+    font-weight: bold;
+    font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
+}
+
+.inputs_block_login>fieldset>input {
+    width: 100%;
+    height: 30px;
+    background-color: #2a5fa2;
     border-radius: 3px;
     border-style: none;
     color: azure;
@@ -124,7 +156,7 @@ input::target-text{
 }
 
 .ref_signin{
-    color: #ffffff;
+    color: #000000;
     margin:10px;
     padding:5px;
     transition:all 0.5s;
@@ -133,11 +165,10 @@ input::target-text{
 .ref_signin:hover{
     box-shadow:0 -5px 0 #088 inset;
     border: #008888 1px solid;
-    color: black;
 }
 
 .ref_signup {
-    color: #ffffff;
+    color: #000000;
     text-align:center;
     margin:10px auto;
     padding:5px 5px;
@@ -146,5 +177,4 @@ input::target-text{
 .ref_signup:hover{
     box-shadow:0 -5px 0 #088 inset;
     border: #008888 1px solid;
-    color: black;
 }
