--- a/src/components/Info/Coordiantes.css
+++ b/src/components/Info/Coordiantes.css
@@ -1,8 +1,8 @@
 .main{
     position: absolute;
-    z-index: 400;
+    z-index: 1000;
     border-radius: 3px;
-    top: 130px;
+    bottom: 170px;
     left: 10px;
     background-color: white;
     padding: 5px;
