страницы: "инормация о пользователе" "восстановление доступа" "восстановление пароля" +изменение стилей

--- a/src/components/TimeLine/Card/Card.module.css
+++ b/src/components/TimeLine/Card/Card.module.css
@@ -1,7 +1,7 @@
 .Card{
-    min-width: 25px;
+    min-width: 30px;
     width: auto;
-    height: 38px;
+    height: 40px;
     background-color: rgba(0, 157, 255, 0.32);
     border: none;
     margin: 1px;
@@ -12,10 +12,16 @@
 }
 .Card>span{
     position: relative;
-    left: 4px;
+    margin:auto 0;
+    left: 20%;
 }
 .Card:hover{
-    background-color: rgba(0, 136, 136, 0.65);
+    background-color: rgba(0, 0, 0, 0.65);
     font-weight: bold;
     color: white;
+    transition: 0.3s;
+}
+.Card:target{
+    background-color: crimson;
+    color: black;
 }
