--- a/src/Login/Restore_Page/Restore.css
+++ b/src/Login/Restore_Page/Restore.css
@@ -25,22 +25,7 @@
     color: azure;
 }
 
-.block_registration{
-    display: inline-block;
-    border-radius: 10px;
-    vertical-align: top;
-    width: 320px;
-    background-color: rgba(240, 248, 255, 0.39);
-    position: absolute;
-    top: 100px;
-    right: 0;
-    left: 0;
-    margin-left: auto;
-    margin-right: auto;
-    padding-bottom: 15px;
-}
-
-.block_authorization {
+.block_restore {
     display: inline-block;
     border-radius: 10px;
     width: 300px;
@@ -54,25 +39,13 @@
     padding-bottom: 15px;
 }
 
-.inputs_block_registration, .inputs_block_login>legend{
+.inputs_block_restore>legend{
     font-size: 19px;
     color: #000000;
     margin-bottom: 3px ;
 }
 
-.inputs_block_registration>input{
-    width: 98%;
-    height: 30px;
-    margin-bottom: 15px;
-    background-color: #2a5fa2;
-    border-radius: 3px;
-    border-style: none;
-    color: azure;
-    font-weight: bold;
-    font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
-}
-
-.inputs_block_login>input {
+.inputs_block_restore>input {
     width: 98%;
     height: 30px;
     margin-bottom: 15px;
@@ -88,9 +61,7 @@ input::placeholder{
     font-weight: bold;
     font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
-input::target-text{
 
-}
 .form_footer{
     position: relative;
     text-align: center;
@@ -103,35 +74,8 @@ input::target-text{
     color: #ff0000;
 }
 
-.registration_button{
-    width: 170px;
-    display:block;
-    font-family: arial, serif;
-    font-size: 16px;
-    border: #109bff 1px solid;
-    color: #000000;
-    padding: 5px;
-    margin: auto;
-    transition: 1s;
-    border-radius: 1px;
-}
-
-.registration_button:hover{
-    transition: .5s;
-    color: #109bff;
-    border: #109bff 1px solid;
-    border-radius: 10px;
-}
-
-.registration_button:active{
-    color: #000;
-    border: #1A1A1A 1px solid;
-    transition: .07s;
-    background-color: #FFF;
-}
-
-.login_button{
-    width:90px;
+.restore_button{
+    width:auto;
     display:block;
     font-size: 16px;
     border: #1071FF 1px solid;
@@ -141,13 +85,13 @@ input::target-text{
     transition: .5s;
     border-radius: 0;
 }
-.login_button:hover{
+.restore_button:hover{
     transition: .5s;
     color: #109bff;
     border: #109bff 1px solid;
     border-radius: 10px;
 }
-.login_button:active{
+.restore_button:active{
     color: #000;
     border: #1A1A1A 1px solid;
     transition: .07s;
@@ -162,29 +106,6 @@ input::target-text{
 }
 
 .ref_signin:hover{
-    box-shadow:0 -5px 0 #088 inset;
-    border: #008888 1px solid;
-}
-
-.ref_signup {
-    display: inline-block;
-    color: #000000;
-    text-align:center;
-    padding:5px;
-    transition:all 0.5s;
-}
-.ref_signup:hover{
-    box-shadow:0 -5px 0 #088 inset;
-    border: #008888 1px solid;
-}
-
-.ref_restore_password{
-    display: inline-block;
-    color: #000000;
-    padding:3px;
-    transition:all 0.5s;
-}
-.ref_restore_password:hover{
     box-shadow:0 -5px 0 #088 inset;
     border: #008888 1px solid;
 }
