--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,11 +1,12 @@
 .Header{
-    position: absolute;
+    position: relative;
     border-radius: 3px;
     box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.25);
     display: flex;
     top: 12px;
-    left: 50px;
-    right: 63px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 28em;
     height: 44px;
     background-color: #fdfdfe;
     z-index: 400;
