--- a/src/components/MainNavBar/MainNavBar.css
+++ b/src/components/MainNavBar/MainNavBar.css
@@ -6,18 +6,15 @@
     right: 5px;
     background-color: transparent;
     border-radius: 3px;
-    /*box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.25);*/
-
 }
 
 .navBarMainInstuments{
     margin: 7px;
     display: flex;
     border-radius: 3px;
-    box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.25);
+    box-shadow: 0 0 0 2px rgba(0,0,0,0.25);
     background-color: white;
     padding: 5px;
-
 }
 .navBar_button{
     min-height: 20px;
@@ -25,7 +22,7 @@
     margin: 5px;
     border: none;
     border-radius: 3px;
-    box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.25);
+    box-shadow: 0 0 0 2px rgba(0,0,0,0.25);
 }
 .navBar_button:hover{
     background-color: #007fff;
@@ -33,7 +30,7 @@
 .show_hide_NavBar{
     position: absolute;
     border: none;
-    box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.25);
+    box-shadow: 0 0 0 2px rgba(0,0,0,0.25);
     z-index: 400;
     top: 63px;
     right: 12px;
@@ -43,7 +40,7 @@
 .navBarMainInstuments_Calendar{
     margin: 10px;
     border-radius: 3px;
-    box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.25);
+    box-shadow: 0 0 0 2px rgba(0,0,0,0.25);
     background-color: white;
     padding: 5px;
     font-size: 16px;
