axios request to back server + loading state + gif + timeline is working(press button => current fire points)

--- a/src/components/Map/Mark_render.module.css
+++ b/src/components/Map/Mark_render.module.css
@@ -60,4 +60,14 @@
     position: absolute;
     z-index: 1000;
 }
+.isRender{
+    max-width: 100px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    z-index: 1000;
+}
 
