--- a/src/components/Map/Mark_render.module.css
+++ b/src/components/Map/Mark_render.module.css
@@ -61,13 +61,21 @@
     z-index: 1000;
 }
 .isRender{
-    max-width: 100px;
+    width: 100%;
+    height: 100%;
     position: absolute;
     top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    margin: auto;
+    background-color: rgba(0,0,0, 0.834);
+    background-repeat: no-repeat;
+    z-index: 1000;
+}
+.isRender img{
+    max-width: 70px;
+    max-height: 70px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
     z-index: 1000;
 }
 
