--- a/src/components/TimeLine/TimeLine.module.css
+++ b/src/components/TimeLine/TimeLine.module.css
@@ -38,19 +38,19 @@
     right: 10px;
     border-radius: 3px;
 }
-.transition-enter {
+.transition_enter {
     opacity: 0;
     transform: scale(0.9);
 }
-.transition-enter-active {
+.transition_enter_active {
     opacity: 1;
     transform: translateX(0);
     transition: opacity 300ms, transform 300ms;
 }
-.transition-exit {
+.transition_exit {
     opacity: 1;
 }
-.transition-exit-active {
+.transition_exit_active {
     opacity: 0;
     transform: scale(0.9);
     transition: opacity 300ms, transform 300ms;
