--- a/src/components/Info/Coordiantes.css
+++ b/src/components/Info/Coordiantes.css
@@ -2,9 +2,9 @@
     position: absolute;
     z-index: 1000;
     border-radius: 3px;
-    bottom: 170px;
+    bottom: 270px;
     left: 10px;
     background-color: white;
     padding: 5px;
-    box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.25);
+    box-shadow: 0 0 0 2px rgba(0,0,0,0.25);
 }
