--- a/src/components/MainNavBar/MainNavBar.module.css
+++ b/src/components/MainNavBar/MainNavBar.module.css
@@ -42,6 +42,7 @@
 .navBarMainInstuments_Calendar{
     display: grid;
     margin: 10px;
+    height: 120px;
     border-radius: 3px;
     box-shadow: 0 0 0 2px rgba(0,0,0,0.25);
     background-color: white;
@@ -72,10 +73,10 @@
 .input1{
     grid-column: 2/3;
     grid-row: 1/2;
-    top: 2px;
+    top: 4px;
 }
 .input2{
-    top: 3px;
+    top: 7px;
     grid-column: 2/3;
     grid-row: 2/2;
 }
