--- a/src/components/TimeLine/TimeLine.module.css
+++ b/src/components/TimeLine/TimeLine.module.css
@@ -13,7 +13,7 @@
     overflow: auto;
     height: auto;
     box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.25);
-    align-content: end;
+    align-content: flex-end;
     padding: 4px;
     cursor: pointer;
 }
