--- a/src/components/MainNavBar/MainNavBar.module.css
+++ b/src/components/MainNavBar/MainNavBar.module.css
@@ -9,8 +9,10 @@
 }
 
 .navBarMainInstuments{
+    display: grid;
+    position: relative;
+    right: 0;
     margin: 7px;
-    display: flex;
     border-radius: 3px;
     box-shadow: 0 0 0 2px rgba(0,0,0,0.25);
     background-color: white;
@@ -68,20 +70,19 @@
     transition: opacity 300ms, transform 300ms;
 }
 .wrapper{
-    display: grid;
+
     margin: 3% 0;
 }
 .latitude{
     top: 6px;
-
 }
 .longitude{
     top: 12px;
 }
 .fly_to_button{
     margin: 20px auto 1em;
-    width: 99%;
-    height: 70%;
+    width: 100%;
+    height: 27%;
     border: none;
     border-radius: 3px;
     box-shadow: 0 0 0 2px rgba(0,0,0,0.05);
@@ -94,4 +95,8 @@
 }
 .fly_to_button:hover{
     background-color: #0059ff;
+}
+
+.button_sort{
+    margin: 3px 0;
 }
