--- a/src/components/TimeLine/TimeLine.module.css
+++ b/src/components/TimeLine/TimeLine.module.css
@@ -12,7 +12,7 @@
     max-width: max-content;
     overflow: auto;
     height: auto;
-    box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.25);
+    box-shadow: 0 0 0 2px rgba(0,0,0,0.25);
     align-content: flex-end;
     padding: 4px;
     cursor: pointer;
