--- a/src/components/TimeLine/TimeLine.module.css
+++ b/src/components/TimeLine/TimeLine.module.css
@@ -18,10 +18,7 @@
     cursor: pointer;
 }
 .scrollDays{
-    /*padding-left: 168px;*/
     position: relative;
-    /*left: 25px;*/
-    /*right: 1px;*/
     display: flex;
     overflow: auto;
     width: auto;
@@ -32,7 +29,7 @@
     height: 40px;
     position: absolute;
     border: none;
-    box-shadow: 0px 0px 0px 2px rgba(0,0,0,0.25);
+    box-shadow: 0 0 0 2px rgba(0,0,0,0.25);
     z-index: 400;
     bottom: 23px;
     right: 10px;
@@ -61,12 +58,84 @@
     color: black;
 }
 .datePicker{
-    padding-left: 0px;
+    padding-left: 0;
     left: 500px;
     display: flex;
     width: 165px;
     max-width: 170px;
     min-width: 170px;
-    /*inline-size: 165px;*/
-    /*right: 20px;*/
+}
+
+.date_time_div{
+    box-shadow: 0 0 0 2px rgba(0,0,0,0.25);
+    padding: 5px;
+    left: 79.5%;
+    bottom: 80px;
+    right: 60px;
+    background-color: white;
+    border: solid black 1px;
+    border-radius: 3px;
+    position: absolute;
+    z-index: 900;
+    max-width: max-content;
+    max-height: max-content;
+    width: auto;
+    height: auto;
+}
+
+.date_time_label{
+    font-size: 16px;
+}
+
+.date_time_min_div{
+    margin: 5px auto;
+}
+
+.date_time_max_div{
+    margin: 5px auto;
+}
+.reset_time{
+    margin-left: 15px;
+    width: 45%;
+    font-size: 16px;
+    border: none;
+    border-radius: 3px;
+    box-shadow: 0 0 0 2px rgba(0,0,0,0.05);
+    color: #fdfdfe;
+    background-color: #007fff;
+}
+.reset_time:hover{
+    background-color: #006efd;
+}
+.save_time{
+    width: 45%;
+    font-size: 16px;
+    border: none;
+    border-radius: 3px;
+    box-shadow: 0 0 0 2px rgba(0,0,0,0.05);
+    color: #fdfdfe;
+    background-color: #007fff;
+}
+.save_time:hover{
+    background-color: #006efd;
+}
+.close_button{
+
+}
+.body_time{
+
+}
+.show_time_panel{
+    width: 44px;
+    height: 40px;
+    position: absolute;
+    border: none;
+    box-shadow: 0 0 0 2px rgba(0,0,0,0.25);
+    z-index: 400;
+    bottom: 6em;
+    right: 9.5px;
+    border-radius: 3px;
+}
+.hide_time_panel{
+    visibility: hidden;
 }
