--- a/src/components/MainNavBar/MainNavBar.module.css
+++ b/src/components/MainNavBar/MainNavBar.module.css
@@ -1,12 +1,10 @@
 .navBar{
-    position: relative;
+    position: absolute;
     float: right;
     z-index: 450;
-    width: 300px;
-    height: 80vh;
-    min-height: 20vh;
-    overflow-y: auto;
-    top: 1vh;
+    width: auto;
+    height: auto;
+    top: 3.5em;
     right: 5px;
     background-color: transparent;
     border-radius: 3px;
@@ -15,9 +13,9 @@
 .list{
     margin: 3px;
 }
+
 .style_map{
-    width: 120px;
-    margin: 0 auto;
+    margin-top: 5px;
     float: left;
 }
 .navBarMainInstruments{
@@ -63,8 +61,6 @@
 .navBarMainInstruments_Calendar{
     display: flex;
     margin: 8px;
-    max-height: 200px;
-    max-width: 200px;
     border-radius: 3px;
     box-shadow: 0 0 0 2px rgba(0,0,0,0.25);
     background-color: white;
@@ -100,8 +96,6 @@
 }
 .fly_to_button{
     margin: 20px auto 1em;
-    width: 100%;
-    height: 27%;
     border: none;
     border-radius: 3px;
     box-shadow: 0 0 0 2px rgba(0,0,0,0.05);
