--- a/src/components/MainNavBar/MainNavBar.module.css
+++ b/src/components/MainNavBar/MainNavBar.module.css
@@ -2,8 +2,8 @@
     position: absolute;
     float: right;
     z-index: 450;
-    width: auto;
-    height: auto;
+
+    height: 100vh;
     top: 3.5em;
     right: 5px;
     background-color: transparent;
