--- a/src/components/MainNavBar/MainNavBar.module.css
+++ b/src/components/MainNavBar/MainNavBar.module.css
@@ -3,7 +3,7 @@
     float: right;
     z-index: 450;
 
-    height: 100vh;
+    /*height: 100vh;*/
     top: 3.5em;
     right: 5px;
     background-color: transparent;
