Переделкин сделал: - стили для маркеров лучше видно - переключение месяцев работает без ошибок, все дни каждого месяца отображаются в соответствии с выбранным месяцем

--- a/src/components/Map/Mark_render.module.css
+++ b/src/components/Map/Mark_render.module.css
@@ -7,22 +7,31 @@
 }
 .custom_marker_cluster_extra_hot{
     background: rgba(152, 0, 0, 0.85);
+    border-style: solid;
+    border-width: 1px;
     border-radius: 50%;
-    color: #000000;
-    /*line-height: 37px;*/
+    color: #ffffff;
+    font-size: 100vw;
+    line-height: 35px;
     text-align: center;
 }
 .custom_marker_cluster_extra_hot:hover{
     background: rgba(175, 1, 1, 1);
      border-style: solid;
      border-width: 1px;
-}
-
-.custom_marker_cluster_red{
-    background: rgba(236, 12, 12, 0.45);
     border-radius: 50%;
-    color: #000000;
-    /*line-height: 37px;*/
+    color: #ffffff;
+    font-size: 100vw;
+    line-height: 35px;
+    text-align: center;
+}
+.custom_marker_cluster_red{
+    background: rgba(236, 12, 12, 0.65);
+    border: solid 1px;
+    border-radius: 50%;
+    color: #ffffff;
+    font-size: medium;
+    line-height: 35px;
     text-align: center;
 }
 .custom_marker_cluster_red:hover{
@@ -32,10 +41,12 @@
 }
 
 .custom_marker_cluster_orange{
-    background: rgba(243, 102, 29, 0.45);
+    background: rgba(243, 102, 29, 0.65);
+    border: solid 1px;
     border-radius: 50%;
-    color: #000000;
-    /*line-height: 37px;*/
+    color: #ffffff;
+    font-size: medium;
+    line-height: 35px;
     text-align: center;
 }
 .custom_marker_cluster_orange:hover{
@@ -45,10 +56,12 @@
 }
 
 .custom_marker_cluster_green{
-    background: rgba(248, 244, 2, 0.4);
+    background: rgba(203, 199, 0, 0.65);
+    border: solid 1px;
     border-radius: 50%;
-    color: #000000;
-    /*line-height: 37px;*/
+    color: #ffffff;
+    font-size: medium;
+    line-height: 35px;
     text-align: center;
 }
 .custom_marker_cluster_green:hover{
