--- a/src/components/Map/Mark_render.module.css
+++ b/src/components/Map/Mark_render.module.css
@@ -11,7 +11,7 @@
     border-width: 1px;
     border-radius: 50%;
     color: #ffffff;
-    font-size: 100vw;
+    font-size: medium;
     line-height: 35px;
     text-align: center;
 }
@@ -21,7 +21,7 @@
      border-width: 1px;
     border-radius: 50%;
     color: #ffffff;
-    font-size: 100vw;
+    font-size: medium;
     line-height: 35px;
     text-align: center;
 }
