--- a/src/components/MainNavBar/MainNavBar.module.css
+++ b/src/components/MainNavBar/MainNavBar.module.css
@@ -2,7 +2,6 @@
     position: absolute;
     float: right;
     z-index: 450;
-
     /*height: 100vh;*/
     top: 3.5em;
     right: 5px;
@@ -54,7 +53,6 @@
     border-radius: 3px;
 }
 .heading_sort{
-    padding: 5px;
 }
 .navBarMainInstruments_Calendar{
     display: flex;
@@ -209,4 +207,45 @@
 .listItem{
 
     margin: -10px auto;
+}
+.reportPdf{
+
+    position: absolute;
+    z-index: 450;
+    top: -1.7em;
+    left: 7px;
+    border-radius: 3px;
+    font-size: 1.3em;
+    box-shadow: 0 0 0 2px rgba(0,0,0,0.25);
+    background-color: white;
+}
+.reportShp{
+
+    position: absolute;
+    z-index: 450;
+    top: -1.7em;
+    left: 28%;
+    border-radius: 3px;
+    font-size: 1.3em;
+    box-shadow: 0 0 0 2px rgba(0,0,0,0.25);
+    background-color: white;
+    align-items: center;
+    justify-content: center;
+}
+.reportButton{
+    font-size: 16px;
+    height: 30px;
+    color: #fdfdfe;
+    border: none;
+    border-radius: 3px;
+    box-shadow: 0 0 0 2px rgba(0,0,0,0.05);
+    background-color: #0059ff;
+    margin: 2px 2px;
+}
+.reportButton:hover{
+    background-color: #006efd;
+}
+.reportButton:active{
+    color: #fdfdfe;
+    background-color: #0059ff;
 }
