Переделкин сделал. - settlement_out2.js отфармотирован. - localities.jsx вывод слоев по зуму(все кроме hamlet):     1) маркеры city,town,village.     2) плоигоны city,town,village.     3) словарь со стилями под каждый тип. - localities.module.css стили под каждый тип н.п. - Auth.jsx :     1) refresh + access в куки(у каждого свое время).     2) обработчик ошибок с сервера. - AccountMenu.js:     1) удаление refresh куки.     2) переход на страницу авторизации.

--- a/src/Pages/Authorization/Auth.module.css
+++ b/src/Pages/Authorization/Auth.module.css
@@ -118,8 +118,13 @@
 }
 
 .error{
-    color: red;
+    color: #ff2525;
     font-size: 18px;
+    text-shadow: 0.5px 0 1px #000,
+    0 1px 1px #000,
+    -1px 0 1px #000,
+    0 -1px 1px #000;
+
 }
 
 .button{
