--- a/src/components/Map/layers/localities.module.css
+++ b/src/components/Map/layers/localities.module.css
@@ -1,7 +1,43 @@
-.pointName{
+.designatedLocalityName{
     font-size: 12px;
     font-family: Arial, serif;
     color: yellow;
+    text-shadow: 1px 0 1px #000,
+    0 1px 1px #000,
+    -1px 0 1px #000,
+    0 -1px 1px #000;
+}
+.ordinaryLocalityCityName{
+    font-size: 12.5px;
+    font-family: Arial, serif;
+    color: #ffffff;
+    text-shadow: 1px 0 1px #000,
+    0 1px 1px #000,
+    -1px 0 1px #000,
+    0 -1px 1px #000;
+}
+.ordinaryLocalityTownName{
+    font-size: 9.5px;
+    font-family: Arial, serif;
+    color: #ffffff;
+    text-shadow: 1px 0 1px #000,
+    0 1px 1px #000,
+    -1px 0 1px #000,
+    0 -1px 1px #000;
+}
+.ordinaryLocalityVillageName{
+    font-size: 9px;
+    font-family: Arial, serif;
+    color: #ffffff;
+    text-shadow: 1px 0 1px #000,
+    0 1px 1px #000,
+    -1px 0 1px #000,
+    0 -1px 1px #000;
+}
+.ordinaryLocalityHamletName{
+    font-size: 9px;
+    font-family: Arial, serif;
+    color: #ffffff;
     text-shadow: 1px 0 1px #000,
     0 1px 1px #000,
     -1px 0 1px #000,
