переделкин : - авторизация + регистрация работает(надо много тестить) - проверка токенов по запросу точек/обновлению карты(надо еще добавлять) - logout работает - переход на страницу админа работает

--- a/src/Pages/Registration/registration.module.css
+++ b/src/Pages/Registration/registration.module.css
@@ -18,7 +18,7 @@
     transform: translateX(-50%) translateY(-50%);
 }
 .form_box {
-    margin-top: 3%;
+    margin-top: 2%;
     position: relative;
     width: 400px;
     min-height: 400px;
@@ -74,12 +74,12 @@
 
 .registration_input{
     width: 100%;
-    height: 50px;
+    height: 35px;
     background: transparent;
     border: none;
     outline: none;
     font-size: 1em;
-    padding:0 35px 0 5px;
+    /*/padding:0 35px 0 5px;*/
     color: #fff;
 }
 .registration_label{
@@ -88,7 +88,7 @@
     left: 5px;
     transform: translateY(-50%);
     color: #fff;
-    font-size: 18px;
+    font-size: 17px;
     pointer-events: none;
     transition: .5s;
 }
@@ -102,7 +102,13 @@
 }
 
 .error{
-    color: red;
+    color: #ff2525;
+    font-size: 18px;
+    text-shadow: 0.5px 0 1px #000,
+    0 1px 1px #000,
+    -1px 0 1px #000,
+    0 -1px 1px #000;
+    margin: -5px;
 }
 
 .button{
