--- a/src/Pages/User_profile/Profile_style.module.css
+++ b/src/Pages/User_profile/Profile_style.module.css
@@ -101,3 +101,25 @@
         transform: rotate(0deg);
     }
 }
+.button{
+    width: 30%;
+    height: 35px;
+    border-radius: 40px;
+    background: #0a147e;
+    color: white;
+    outline: none;
+    cursor: pointer;
+    font-size: 0.9em;
+    font-weight: 100;
+    transition: 0.5s;
+    margin: 20px;
+}
+.button:hover{
+    background: #ffffff;
+    color: #0a147e;
+    transition: 0.5s;
+}
+.button:active{
+    color: red;
+    background-color: white;
+}
