переделкин : - всего помаленьку

--- a/src/Pages/Authorization/Auth.module.css
+++ b/src/Pages/Authorization/Auth.module.css
@@ -124,7 +124,14 @@
     0 1px 1px #000,
     -1px 0 1px #000,
     0 -1px 1px #000;
-
+}
+.success{
+    color: #1de80e;
+    font-size: 18px;
+    text-shadow: 0.5px 0 1px #000,
+    0 1px 1px #000,
+    -1px 0 1px #000,
+    0 -1px 1px #000;
 }
 
 .button{
