--- a/src/Pages/Restore_Page/Restore.module.css
+++ b/src/Pages/Restore_Page/Restore.module.css
@@ -78,7 +78,16 @@
     color: red;
     font-size: 20px;
 }
-
+.password_input{
+    width: 100%;
+    height: 50px;
+    background: transparent;
+    border: none;
+    outline: none;
+    font-size: 1.3em;
+    padding:0 35px 0 5px;
+    color: #fff;
+}
 .button{
     width: 100%;
     height: 40px;
