--- a/src/components/MainNavBar/MainNavBar.module.css
+++ b/src/components/MainNavBar/MainNavBar.module.css
@@ -27,6 +27,13 @@
     font-weight: bold;
     font-family: Arial, serif;
 }
+.imagesComposite{
+    margin-top: -23px;
+    margin-left: 15px;
+    margin-bottom: -30px;
+    margin-right: -30px;
+}
+
 .navBarMainInstruments{
     margin: 7px;
     border-radius: 3px;
@@ -35,7 +42,6 @@
     padding: 5px;
 }
 .navBarSortDate{
-    flex-direction: column;
     margin: 7px;
     border-radius: 3px;
     box-shadow: 0 0 0 2px rgba(0,0,0,0.25);
