Переделкин переделал: Переделан интервал между запросами на восстановление пароля Чуть-чуть стилей Исправлена опечатка в Руководстве

--- a/src/Pages/Users_guide/User_manual.module.css
+++ b/src/Pages/Users_guide/User_manual.module.css
@@ -104,3 +104,9 @@
         transform: rotate(0deg);
     }
 }
+.aboutUs{
+    background-color: #eeeeee;
+    border: groove black;
+    border-radius: 1px;
+    padding-left: 15px;
+}
