переделкин : - восстановление пароля - стили для профиля на кнопки; - длина маркера, для нп в районе 5 км от твв увелеичил.

--- a/src/Pages/User_profile/Profile_style.module.css
+++ b/src/Pages/User_profile/Profile_style.module.css
@@ -123,6 +123,7 @@
     background: #ffffff;
     color: #0a147e;
     transition: 0.5s;
+    border: solid 1px #0077c2;
 }
 .button:active{
     color: red;
